--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,27 @@
 {
   "manifest_version": 2,
   "name": "Vimstalled",
-  "version": "0.1",
+  "version": "0.2",
 
   "description": "Indicates when a git repo is installed in your vimrc",
-
+  "icons": { "16": "images/16.png","48": "images/48.png","128": "images/128.png" },
+  "background": {
+    "persistent": false,
+    "scripts": ["background.js"]
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://github.com/*"],
+      "css": ["tout.css"],
+      "js": ["tout.js"]
+    }
+  ],
+  "browser_action": {
+    "default_icon": {
+      "38": "images/38.png"
+    },
+    "default_title": "Vimstalled"
+  },
   "author": "Peter Meehan",
   "homepage_url": "https://github.com/22a/Vimstalled",
   "options_page": "options.html",
